welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: identifier expected but integer literal found.
  if (!(hour in [7,20]) && talking) 
                 ^parotTrouble:4: error: ']' expected but '}' found.
} 
^parotTrouble:2: error: type application is not allowed for postfix operators
  if (!(hour in [7,20]) && talking) 
             ^